tests/compile-fail/Rule_5_2.rs
#[forbid(clippy_pedantic)]
#[forbid(clippy)]
#[forbid(warnings)]

fn main() {
    let engine_exhaust_gas_temperature_raw: i32 = 0;
    let engine_exhaust_gas_temperature_scaled: i32 = 1;

    let _ = engine_exhaust_gas_temperature_raw;
    let _ = engine_exhaust_gas_temperature_scaled;
}
